app/public/assets/styles.css
/* ------------------ */
/* CUSTOM CSS STYLING */
/* ------------------ */
#root {
  display: flex;
}

.header {
  -webkit-box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.75);
  -moz-box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.75);
  box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.75);
  /*overflow: hidden;*/
  position: fixed; /* Set the navbar to fixed position */
  top: 0; /* Position the navbar at the top of the page */
  width: 100%; /* Full width */
  z-index: 20;
  background-color: white;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.refresh {
  float: left;
}

.divider {
  width: 100%;
}

.viewing {
  float: right;
}

.viewing p {
  display: inline-block;
  margin-right: 10px;
}

/* ---------------- */
/* HEADER COMPONENT */
/* ---------------- */
.logo-img {
  height: 70px;
}

.login-link {
  padding-right: 10px;
}

.user-stuff {
  padding-right: 15px;
  display: flex;
  justify-content: space-between;
}

.profile-pic-nav {
  min-width: 55px;
}

.profile-pic-nav-img {
  border-radius: 100%;
}
.user-stuff-text {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

/* ----------------- */
/* HOME AND PROFILE  */
/* ----------------- */

.contentContainer {
  width: 100%;
  margin-top: 100px;
}

.topicsAndSourcesContainer {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  padding-left: 15px;
  padding-right: 15px;
  min-inline-size: 160px;
  position: fixed;
  top: 90px;
}

.articlesContainer {
  /* display: flex; */
  /* flex-direction: column;
  align-items: center; */
  margin: 0 0 0 250px;
}


/* ----------------- */
/*       HOME        */
/* ----------------- */

.btn-refresh {
  float: left;
  margin: 10px 0;
}

.message {
  display: block;
  text-align: center;
}

.favbtn {
  float: right;
  clear: both;
}

#savePreferences {
  margin-left: 15px;
}


.newsList {
  overflow-y: scroll; 
}

#no-articles {
  margin: 15px auto;
  width: 50%;
}

.newsItem {
  width: 80%;
  margin: 30px auto;
}
.articleImg {
  height: auto;
  width: 100%;
  margin: auto;
  border-radius: 5px;
}

.articleTitle {

}

.articleSource {
  font-weight: bold;
}

.articleDescription, .articleAuthor, .articleUrl, .articleSource {
/* border: 1px solid black; */
  padding: 10px 0;
  margin: auto;
}

.articleAuthor {
  display: inline-block;
  font-weight: normal;
}

.articleUrl {

}

.articleDescription {

}

.add {
  font-size: 15px;
}

.remove .btn {
  font-size: 12px;
}

.add-remove-btn:hover {
  color: blue;
}

.favorite:hover {
  color: red;
}

.favorited {
  color: red;
}

/* ------------ */
/*    Share     */
/* ------------ */

.article-bottom-nav {
  display: flex;
  flex-direction: column;
}

.share-icons {
  display: flex;
  padding-bottom: 5px;

}

/* ---------------------------- */
/*    Material-UI Component     */
/* ---------------------------- */
.addSourceContainer {
  display: inline-block;
  vertical-align:top;
}

.AddSource-container-1 {
  display: inline-block;
}

.AddSource-container-20 {
  display: inline-block;
}

.AddSource-container-90 {
  display: inline-block;
}

.AddSource-container-120 {
  display: inline-block;
}

#add-source-container {
  display: inline-block;
  vertical-align:top;
}

#add-input-container {
  display: inline-block;
}

/* ---------------------------- */
/*      Selectetd Sources       */
/* ---------------------------- */
.selectedSourcesContainer {
  display: block;
  /*margin-left: 40px;*/
}

.selectedSources {
  display: block;
}

/* ---------------------------- */
/*      Topics Containers       */
/* ---------------------------- */

.topics-list-container, .selectedSourcesContainer {
  margin-left: 25px;
}

/* ---------------------------- */
/*      Login Component         */
/* ---------------------------- */
.login-page {
  width: 360px;
  padding: 8% 0 0;
  margin: auto;
}
.form {
  position: relative;
  z-index: 1;
  background: #FFFFFF;
  max-width: 360px;
  margin: 0 auto 100px;
  padding: 45px;
  text-align: center;
  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
}

.loginBtn {
  box-sizing: border-box;
  position: relative;
  /* width: 13em;  - apply for fixed size */
  margin: 0.2em;
  padding: 0 15px 0 46px;
  border: none;
  text-align: left;
  line-height: 34px;
  white-space: nowrap;
  border-radius: 0.2em;
  font-size: 16px;
  color: #FFF;
}
.loginBtn:before {
  content: "";
  box-sizing: border-box;
  position: absolute;
  top: 0;
  left: 0;
  width: 34px;
  height: 100%;
}
.loginBtn:focus {
  outline: none;
}
.loginBtn:active {
  box-shadow: inset 0 0 0 32px rgba(0,0,0,0.1);
}

.loginBtn--google {
  /*font-family: "Roboto", Roboto, arial, sans-serif;*/
  background: #DD4B39;
}
.loginBtn--google:before {
  border-right: #BB3F30 1px solid;
  background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_google.png') 6px 6px no-repeat;
}
.loginBtn--google:hover,
.loginBtn--google:focus {
  background: #E74B37;
}

/* ---------------------------- */
/*      Profile Component       */
/* ---------------------------- */

.profile-container {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.profile-pg-user {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.profile-pg-profile-img {
  height: 100px;
  border-radius: 100%;
}

.saved-preferences {
  display: flex;
  flex-direction: column;
}

.fav-article-header {
  position: inherit;
  background-color: white;
  padding-top: 10px;
  top: 70px;
  z-index: 15;
}

/* ---------------------------- */
/*      Comment Component       */
/* ---------------------------- */

textarea {
  resize: none;
}

.CommentComponent {
  width: 100%;
}

.Comment {
  margin: 10px 10px 20px 10px;
  word-wrap: break-word;
  overflow: auto;
}

.Comment .username {
  font-size: 15px;
  font-weight: bold;
  float: left;
  width: 50%;
  margin-right: 10px;
}

.Comment .commentedAt {
  float: right;
  margin-right: 10px;
  font-style: italic;
  color: gray;
}

.Comment .comment {
  float: left;
  width: 70%;
  margin-right: 15%;
}

.Comment .profileImg {
  float: left;
  width: 10%;
  margin-right: 10px;
}

.CommentSection {
  background-color: aliceblue;
  margin-top: 20px;
}

.CommentInput {
  margin-left: 10px;
  margin-right: 10px;
}

.CommentInput #label {
  width: 100%;
}

.CommentInput #field {
  width: 100%;
  margin: 5px 0 10px;
  display: -webkit-box;
}

.CommentInput #submit {
  float: right;
  font-size: 12px;
  margin-bottom: 5px;
}

.CommentsList {
  overflow-y: scroll;
  max-height: 400px;
}

#showComments {
  font-size: 12px;
}

.commentImg {
  height: 20px;
  width: 20px;
  margin-right: 10px;
}

.btn-funny {
  color: white;
  background-color: #3f51b5;
  float: right;
}

.full-article {
  width: 70%;
  margin-left: 15%;
  margin-top: 70px;
}

.news-list {
  float: right;
  width: 80%;
}

.clearfix:after {
  content: " ";
  display: table;
  clear: both;
}

.sofie-app {
  width: 100%;
}

.recommended-list {
  width: 20%;
  float: right;
  padding-right: 30px;
  opacity: 1;
}

